# singleton-task

./: Cargo.toml  MULTITHREADED_TESTS.md  README.md
.github/workflows/: ci.yml
examples/: task.rs
src/: context.rs  lib.rs  one_channel.rs  task_chan.rs
tests/: test.rs
