[package]
name = "singleton-task"
version = "0.2.2"
edition = "2024"
authors = ["周睿 <zrufo747@outlook.com>"]
description = "A singleton task based on tokio"
repository = "https://gitee.com/zr233/singleton-task"
license = "MulanPSL-2.0"
keywords = ["task", "async"]
categories = ["asynchronous", "concurrency"]

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-util = "0.7"

[dev-dependencies]
env_logger = "0.11"
