[package]
authors = ["周睿 <zrufo747@outlook.com>"]
categories = ["asynchronous", "concurrency"]
description = "A singleton task based on tokio"
edition = "2024"
keywords = ["task", "async"]
license = "MulanPSL-2.0"
name = "singleton-task"
repository = "https://github.com/ZR233/singleton-task"
version = "0.4.0"

[dependencies]
async-trait = "0.1"
log = "0.4"
tokio = {version = "1", features = ["full"]}
tokio-util = {version = "0.7", features = ["rt"]}

[dev-dependencies]
env_logger = "0.11"
